--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
   font-size: 10px;
-  background: url("https://i.imgur.com/b9r5sEL.jpg") bottom center;
-  background-size: cover;
+  background: url("https://images.pexels.com/photos/1763075/pexels-photo-1763075.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940")
+    center center/cover;
 }
 
 body,
